Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Kobie's Blog - A digital archive of thoughts, musings, and creative explorations." />
+    <meta name="description" content="Kobie's Blog - A slow unraveling of who I am becoming." />
     
     <!-- Google Fonts: Playfair Display, Inter, Courier Prime -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
